examples/argocd-ingress.yaml
---
#apiVersion: cert-manager.io/v1
#kind: Certificate
#metadata:
#  name: my-selfsigned-ca
#  namespace: cert-manager
#spec:
#  isCA: true
#  commonName: my-selfsigned-ca
#  secretName: root-secret
#  privateKey:
#    algorithm: ECDSA
#    size: 256
#  issuerRef:
#    name: selfsigned-issuer
#    kind: ClusterIssuer
#    group: cert-manager.io
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: selfsigned
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # If you encounter a redirect loop or are getting a 307 response code
    # then you need to force the nginx ingress to connect to the backend using HTTPS.
    #
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
  - host: &domain argocd.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
  tls:
  - hosts:
    - *domain
    secretName: argocd-server-tls # as expected by argocd-server
