examples/kyverno-example-mutate.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: application-label-validation
  annotations:
    policies.kyverno.io/title: Application Label Validation
    policies.kyverno.io/category: Test
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Application
    kyverno.io/kyverno-version: 1.6.0
    policies.kyverno.io/minversion: 1.6.0
    kyverno.io/kubernetes-version: "1.23"
    policies.kyverno.io/description: >-
      This is a test policy to test Kyverno, checkint the "kyvernotest" label on applications.
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: label-kyvernotest
      match:
        any:
        - resources:
            kinds:
            - Application
      mutate:
        patchStrategicMerge:
          metadata:
            labels:
              kyvernotest: ok
